retrieveUnpackaged/objects/Weekly__c.object
<CustomObject>
    <description>Collection of significant items for the week</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Highlights of the Past Week</fullName>
                </value>
                <value>
                    <fullName>Significant Items for Next Week</fullName>
                </value>
                <value>
                    <fullName>Internal To Region 9</fullName>
                </value>
                <value>
                    <fullName>Internal To Division</fullName>
                </value>
                <value>
                    <fullName>Other Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Body__c</fullName>
        <description>Primary content</description>
        <label>Text Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Week_Of__c</fullName>
        <description>The week of the report that you would like to have the item included in</description>
        <inlineHelpText>Choose a date before the weekly is compiled (Monday for example if it is compiled on Wednesdays) to be included in that weekly</inlineHelpText>
        <label>Week Reporting</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Weekly</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>